Trac error template:  - fixed validation issues (all but ''<ol> has not start attribute'' which is there to stay, I think)  - fix a CSS issue with IE, error message would be covered entirely by the horizontal scollbar if an overflow happened
git-svn-id: http://trac.edgewall.org/intertrac/log:/trunk@5348 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -461,7 +461,7 @@ table.listing tbody tr:hover { background: #eed !important }
 }
 #content.error pre, div.system-message pre {
   margin-left: 1em;
-  overflow: auto;
+  overflow: hidden;
 }
 div.system-message p { margin: 0; }
 div.system-message p.system-message-title { font-weight: bold; }
@@ -469,8 +469,8 @@ div.system-message p.system-message-title { font-weight: bold; }
 #warning.system-message { background: #def; border: 2px solid #00d; }
 #warning.system-message li { list-style-type: square; }
 
-#content.error #newticket form { display: inline; }
-#content.error #newticket textarea { display: none; }
+#content.error form.newticket { display: inline; }
+#content.error form.newticket textarea { display: none; }
 
 #content.error #systeminfo { margin: 1em; width: auto; }
 #content.error #systeminfo th { font-weight: bold; text-align: right; }
